[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.159"
dotenv = "0.15.0"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.mongodb]
version = "2.4.0"
default-features = false
features = ["sync"] 